--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 12:05:25 2018</p>
+         Last Run: Wed Jul 11 13:05:27 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
-                        <td>31</td>
+                        <td>34</td>
                         <td>4</td>
                         <td>8</td>
                         <td>SSE</td>
@@ -43,14 +43,14 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Clear</td>
-                        <td>26</td>
-                        <td>26</td>
+                        <td>25</td>
+                        <td>25</td>
                         <td>0</td>
-                        <td>29</td>
+                        <td>32</td>
                         <td>2</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>S</td>
-                        <td>20</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>25</td>
                         <td>25</td>
                         <td>0</td>
-                        <td>29</td>
+                        <td>33</td>
                         <td>1</td>
-                        <td>8</td>
-                        <td>SE</td>
-                        <td>19</td>
+                        <td>10</td>
+                        <td>SSE</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -70,11 +70,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>32</td>
+                        <td>37</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>12</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -82,7 +82,7 @@
                         <td>22</td>
                         <td>22</td>
                         <td>1</td>
-                        <td>40</td>
+                        <td>43</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SE</td>
@@ -133,7 +133,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "26",
-                 "26",
+                 "25",
                  "25",
                  "24",
                  "22"
@@ -146,7 +146,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "26",
-                 "26",
+                 "25",
                  "25",
                  "24",
                  "22"
@@ -214,11 +214,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "31",
-                 "29",
-                 "29",
+                 "34",
                  "32",
-                 "40"
+                 "33",
+                 "37",
+                 "43"
                ]
              },
              {
@@ -227,9 +227,9 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "16",
-                 "20",
                  "19",
-                 "12",
+                 "22",
+                 "14",
                  "8"
                ]
              }
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 12:05:25 2018</p>
+         Last Run: Wed Jul 11 13:05:27 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -272,7 +272,7 @@
                         <td>11</td>
                         <td>11</td>
                         <td>31</td>
-                        <td>74</td>
+                        <td>80</td>
                         <td>2</td>
                         <td>14</td>
                         <td>NW</td>
@@ -284,9 +284,9 @@
                         <td>12</td>
                         <td>12</td>
                         <td>11</td>
-                        <td>63</td>
+                        <td>69</td>
                         <td>2</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>NNW</td>
                         <td>91</td>
                      </tr>
@@ -296,7 +296,7 @@
                         <td>14</td>
                         <td>14</td>
                         <td>4</td>
-                        <td>53</td>
+                        <td>58</td>
                         <td>3</td>
                         <td>13</td>
                         <td>NNW</td>
@@ -305,10 +305,10 @@
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>16</td>
-                        <td>16</td>
+                        <td>15</td>
+                        <td>15</td>
                         <td>1</td>
-                        <td>48</td>
+                        <td>52</td>
                         <td>4</td>
                         <td>10</td>
                         <td>NW</td>
@@ -320,7 +320,7 @@
                         <td>17</td>
                         <td>17</td>
                         <td>1</td>
-                        <td>41</td>
+                        <td>47</td>
                         <td>6</td>
                         <td>10</td>
                         <td>NW</td>
@@ -373,7 +373,7 @@
                  "11",
                  "12",
                  "14",
-                 "16",
+                 "15",
                  "17"
                ]
              },
@@ -386,7 +386,7 @@
                  "11",
                  "12",
                  "14",
-                 "16",
+                 "15",
                  "17"
                ]
              }
@@ -452,11 +452,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "74",
-                 "63",
-                 "53",
-                 "48",
-                 "41"
+                 "80",
+                 "69",
+                 "58",
+                 "52",
+                 "47"
                ]
              },
              {
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 12:05:25 2018</p>
+         Last Run: Wed Jul 11 13:05:27 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -507,8 +507,8 @@
                      <tr>
                         <td>09:00 AM</td>
                         <td>Clear</td>
-                        <td>15</td>
-                        <td>15</td>
+                        <td>16</td>
+                        <td>16</td>
                         <td>0</td>
                         <td>50</td>
                         <td>2</td>
@@ -531,8 +531,8 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>19</td>
-                        <td>19</td>
+                        <td>20</td>
+                        <td>20</td>
                         <td>0</td>
                         <td>39</td>
                         <td>4</td>
@@ -550,7 +550,7 @@
                         <td>6</td>
                         <td>11</td>
                         <td>S</td>
-                        <td>5</td>
+                        <td>4</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -608,9 +608,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "15",
+                 "16",
                  "18",
-                 "19",
+                 "20",
                  "21",
                  "22"
                ]
@@ -621,9 +621,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "15",
+                 "16",
                  "18",
-                 "19",
+                 "20",
                  "21",
                  "22"
                ]
@@ -705,7 +705,7 @@
                  "3",
                  "3",
                  "4",
-                 "5",
+                 "4",
                  "6"
                ]
              }
@@ -723,7 +723,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 12:05:25 2018</p>
+         Last Run: Wed Jul 11 13:05:27 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -745,26 +745,26 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Clear</td>
-                        <td>24</td>
-                        <td>24</td>
+                        <td>25</td>
+                        <td>25</td>
                         <td>0</td>
-                        <td>29</td>
+                        <td>30</td>
                         <td>2</td>
-                        <td>16</td>
-                        <td>ENE</td>
-                        <td>16</td>
+                        <td>14</td>
+                        <td>ESE</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>23</td>
-                        <td>23</td>
+                        <td>24</td>
+                        <td>24</td>
                         <td>0</td>
-                        <td>32</td>
+                        <td>33</td>
                         <td>1</td>
-                        <td>18</td>
-                        <td>ENE</td>
-                        <td>12</td>
+                        <td>16</td>
+                        <td>E</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -772,11 +772,11 @@
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
-                        <td>38</td>
+                        <td>39</td>
                         <td>0</td>
-                        <td>18</td>
-                        <td>E</td>
-                        <td>9</td>
+                        <td>16</td>
+                        <td>ESE</td>
+                        <td>11</td>
                      </tr>
                   </tbody>
                </table>
@@ -820,8 +820,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
+                 "25",
                  "24",
-                 "23",
                  "22"
                ]
              },
@@ -831,8 +831,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
+                 "25",
                  "24",
-                 "23",
                  "22"
                ]
              }
@@ -894,9 +894,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "29",
-                 "32",
-                 "38"
+                 "30",
+                 "33",
+                 "39"
                ]
              },
              {
@@ -904,9 +904,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "16",
-                 "12",
-                 "9"
+                 "17",
+                 "14",
+                 "11"
                ]
              }
            ]
@@ -923,7 +923,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 12:05:25 2018</p>
+         Last Run: Wed Jul 11 13:05:27 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
