--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 13:05:27 2018</p>
+         Last Run: Wed Jul 11 14:05:29 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
-                        <td>34</td>
+                        <td>33</td>
                         <td>4</td>
                         <td>8</td>
                         <td>SSE</td>
-                        <td>16</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
@@ -50,7 +50,7 @@
                         <td>2</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>19</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>1</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>22</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -74,7 +74,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>14</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -82,7 +82,7 @@
                         <td>22</td>
                         <td>22</td>
                         <td>1</td>
-                        <td>43</td>
+                        <td>44</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SE</td>
@@ -214,11 +214,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "34",
+                 "33",
                  "32",
                  "33",
                  "37",
-                 "43"
+                 "44"
                ]
              },
              {
@@ -226,10 +226,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "16",
-                 "19",
-                 "22",
-                 "14",
+                 "10",
+                 "13",
+                 "18",
+                 "13",
                  "8"
                ]
              }
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 13:05:27 2018</p>
+         Last Run: Wed Jul 11 14:05:29 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -271,60 +271,60 @@
                         <td>Chance of Rain</td>
                         <td>11</td>
                         <td>11</td>
-                        <td>31</td>
-                        <td>80</td>
+                        <td>32</td>
+                        <td>78</td>
                         <td>2</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>NW</td>
-                        <td>79</td>
+                        <td>72</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>12</td>
                         <td>12</td>
                         <td>11</td>
-                        <td>69</td>
-                        <td>2</td>
-                        <td>13</td>
+                        <td>67</td>
+                        <td>3</td>
+                        <td>14</td>
                         <td>NNW</td>
-                        <td>91</td>
+                        <td>77</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>14</td>
                         <td>14</td>
+                        <td>5</td>
+                        <td>54</td>
                         <td>4</td>
-                        <td>58</td>
-                        <td>3</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>NNW</td>
-                        <td>92</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>15</td>
-                        <td>15</td>
+                        <td>16</td>
+                        <td>16</td>
                         <td>1</td>
-                        <td>52</td>
-                        <td>4</td>
-                        <td>10</td>
+                        <td>46</td>
+                        <td>5</td>
+                        <td>13</td>
                         <td>NW</td>
-                        <td>79</td>
+                        <td>74</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>17</td>
-                        <td>17</td>
+                        <td>18</td>
+                        <td>18</td>
                         <td>1</td>
-                        <td>47</td>
+                        <td>40</td>
                         <td>6</td>
                         <td>10</td>
                         <td>NW</td>
-                        <td>65</td>
+                        <td>66</td>
                      </tr>
                   </tbody>
                </table>
@@ -373,8 +373,8 @@
                  "11",
                  "12",
                  "14",
-                 "15",
-                 "17"
+                 "16",
+                 "18"
                ]
              },
              {
@@ -386,8 +386,8 @@
                  "11",
                  "12",
                  "14",
-                 "15",
-                 "17"
+                 "16",
+                 "18"
                ]
              }
            ]
@@ -440,9 +440,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "31",
+                 "32",
                  "11",
-                 "4",
+                 "5",
                  "1",
                  "1"
                ]
@@ -452,11 +452,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "80",
-                 "69",
-                 "58",
-                 "52",
-                 "47"
+                 "78",
+                 "67",
+                 "54",
+                 "46",
+                 "40"
                ]
              },
              {
@@ -464,11 +464,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "72",
+                 "77",
                  "79",
-                 "91",
-                 "92",
-                 "79",
-                 "65"
+                 "74",
+                 "66"
                ]
              }
            ]
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 13:05:27 2018</p>
+         Last Run: Wed Jul 11 14:05:29 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -507,36 +507,36 @@
                      <tr>
                         <td>09:00 AM</td>
                         <td>Clear</td>
-                        <td>16</td>
-                        <td>16</td>
+                        <td>15</td>
+                        <td>15</td>
                         <td>0</td>
-                        <td>50</td>
+                        <td>53</td>
                         <td>2</td>
-                        <td>11</td>
-                        <td>SSW</td>
+                        <td>10</td>
+                        <td>SW</td>
                         <td>3</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>18</td>
-                        <td>18</td>
+                        <td>17</td>
+                        <td>17</td>
                         <td>0</td>
-                        <td>42</td>
+                        <td>45</td>
                         <td>3</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>SSW</td>
-                        <td>3</td>
+                        <td>4</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>20</td>
-                        <td>20</td>
+                        <td>19</td>
+                        <td>19</td>
                         <td>0</td>
-                        <td>39</td>
+                        <td>41</td>
                         <td>4</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>S</td>
                         <td>4</td>
                      </tr>
@@ -546,11 +546,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>35</td>
+                        <td>37</td>
                         <td>6</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>S</td>
-                        <td>4</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -558,7 +558,7 @@
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
-                        <td>33</td>
+                        <td>34</td>
                         <td>7</td>
                         <td>13</td>
                         <td>S</td>
@@ -608,9 +608,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "16",
-                 "18",
-                 "20",
+                 "15",
+                 "17",
+                 "19",
                  "21",
                  "22"
                ]
@@ -621,9 +621,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "16",
-                 "18",
-                 "20",
+                 "15",
+                 "17",
+                 "19",
                  "21",
                  "22"
                ]
@@ -690,11 +690,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "50",
-                 "42",
-                 "39",
-                 "35",
-                 "33"
+                 "53",
+                 "45",
+                 "41",
+                 "37",
+                 "34"
                ]
              },
              {
@@ -703,9 +703,9 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "3",
-                 "3",
                  "4",
                  "4",
+                 "5",
                  "6"
                ]
              }
@@ -723,7 +723,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 13:05:27 2018</p>
+         Last Run: Wed Jul 11 14:05:29 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -752,7 +752,7 @@
                         <td>2</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>17</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -760,11 +760,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>33</td>
+                        <td>34</td>
                         <td>1</td>
                         <td>16</td>
                         <td>E</td>
-                        <td>14</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -772,11 +772,11 @@
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
-                        <td>39</td>
+                        <td>40</td>
                         <td>0</td>
                         <td>16</td>
                         <td>ESE</td>
-                        <td>11</td>
+                        <td>13</td>
                      </tr>
                   </tbody>
                </table>
@@ -895,8 +895,8 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "30",
-                 "33",
-                 "39"
+                 "34",
+                 "40"
                ]
              },
              {
@@ -904,9 +904,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "17",
-                 "14",
-                 "11"
+                 "20",
+                 "16",
+                 "13"
                ]
              }
            ]
@@ -923,7 +923,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 13:05:27 2018</p>
+         Last Run: Wed Jul 11 14:05:29 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -948,35 +948,35 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>27</td>
+                        <td>30</td>
                         <td>1</td>
-                        <td>16</td>
-                        <td>SSE</td>
-                        <td>8</td>
+                        <td>18</td>
+                        <td>SE</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
                         <td>25</td>
                         <td>25</td>
-                        <td>0</td>
-                        <td>32</td>
+                        <td>1</td>
+                        <td>36</td>
                         <td>0</td>
                         <td>16</td>
-                        <td>SE</td>
-                        <td>7</td>
+                        <td>ESE</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>4</td>
-                        <td>39</td>
+                        <td>23</td>
+                        <td>23</td>
+                        <td>24</td>
+                        <td>43</td>
                         <td>0</td>
-                        <td>14</td>
-                        <td>ESE</td>
-                        <td>6</td>
+                        <td>16</td>
+                        <td>E</td>
+                        <td>8</td>
                      </tr>
                   </tbody>
                </table>
@@ -1022,7 +1022,7 @@
                "data":[
                  "27",
                  "25",
-                 "22"
+                 "23"
                ]
              },
              {
@@ -1033,7 +1033,7 @@
                "data":[
                  "27",
                  "25",
-                 "22"
+                 "23"
                ]
              }
            ]
@@ -1085,8 +1085,8 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "0",
-                 "4"
+                 "1",
+                 "24"
                ]
              },
              {
@@ -1094,9 +1094,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "27",
-                 "32",
-                 "39"
+                 "30",
+                 "36",
+                 "43"
                ]
              },
              {
@@ -1104,9 +1104,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "8",
-                 "7",
-                 "6"
+                 "10",
+                 "9",
+                 "8"
                ]
              }
            ]
